--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ MONGODB_URL = mongodb+srv://ymirfritz98:mohamed353@mern-e-commerce.nntws.mongodb
 
 JWT_SECRET_KEY = $2a$12$MeRGXIk/Sn.32YGyab1dFulanYj5Ug89CyVDrYyKy.PRRtVqp1qFq
 
-FRONTEND_URL = http://localhost:3000
+FRONTEND_URL = "https://e-commerce-frontend-three-coral.vercel.app"
