--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "browser-image-compression": "^2.0.2",
+    "dotenv": "^16.4.5",
     "http-status-codes": "^2.3.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
